--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language:    elixir
-elixir:      1.2.0
-otp_release: 18.0
+elixir:      1.4.0
+otp_release: 19.2
+
+matrix:
+  include:
+    - elixir: 1.3.4
+      otp_release: 19.2
+    - elixir: 1.2.6
+      otp_release: 18.3
 
 sudo: false
 env:  CAYLEY=v0.6.0 MIX_ENV=test
